--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -18,7 +18,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".SignUp"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Profile"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".HomeNew"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".FindID"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".FindPW"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
