--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.memod">
-
+    <!-- 인터넷 사용 권한 -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,24 +20,44 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignUp"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".Profile"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".HomeNew"
-            android:exported="true">
-        </activity>
-        <activity
             android:name=".FindID"
             android:exported="true">
         </activity>
         <activity
             android:name=".FindPW"
             android:exported="true">
+        </activity>
+        <activity
+        android:name=".SignUp"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".Profile"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".SignUpSucceess"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".HomeNew"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".SearchGroup"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".SearchPost"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".SearchTotal"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".SearchUser"
+        android:exported="true">
         </activity>
     </application>
 
