--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -60,6 +60,18 @@
         android:name=".SearchUser"
         android:exported="true">
         </activity>
+        <activity
+            android:name=".Notification"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".MypageMap"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".MypageTimeline"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
