--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -72,6 +72,10 @@
             android:name=".MypageTimeline"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
