--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -60,6 +60,18 @@
         android:name=".SearchUser"
         android:exported="true">
         </activity>
+        <activity
+        android:name=".GroupCreate"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".GroupScreen"
+        android:exported="true">
+        </activity>
+        <activity
+        android:name=".GroupCreateSuccess"
+        android:exported="true">
+        </activity>
     </application>
 
 </manifest>
