--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -84,6 +84,10 @@
         android:name=".GroupCreateSuccess"
         android:exported="true">
         </activity>
+        <activity
+            android:name=".PostActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
