--- a/MemoD/app/src/main/AndroidManifest.xml
+++ b/MemoD/app/src/main/AndroidManifest.xml
@@ -89,6 +89,11 @@
             android:name=".PostActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".MakePost"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
